feat: udistrital/sga_documentacion#575
se suben endpoints de api_mid
